# recursive_intelligence

./: .gitignore  README.md  architecture.md  claude_runtime_plan.md  experiment.md  productization_plan.md  pyproject.toml
benchmarks/manifests/: recursive-hard-v1.json
scripts/: spike_m0.py
src/recursive_intelligence/: __init__.py  cli.py  config.py  test_commands.py  tui.py  ui_messages.py
src/recursive_intelligence/adapters/: base.py
src/recursive_intelligence/adapters/claude/: adapter.py  parser.py  permissions.py  prompts.py
src/recursive_intelligence/benchmarks/: __init__.py  evaluation.py  manifest.py  models.py  reporting.py  runner.py  swebench.py
src/recursive_intelligence/git/: diffing.py  merge.py  worktrees.py
src/recursive_intelligence/runtime/: artifact_store.py  baseline.py  delivery.py  node_fsm.py  orchestrator.py  scheduler.py  state_store.py
tests/: conftest.py
tests/adapters/: test_parser.py  test_permissions.py  test_prompts.py
tests/benchmarks/: test_manifest.py  test_runner.py  test_swebench.py
tests/git/: test_worktrees.py
tests/runtime/: test_baseline.py  test_delivery.py  test_multipass.py  test_node_fsm.py  test_orchestrator.py  test_parallel.py  test_state_store.py  test_tui.py  test_ui_messages.py
